# speak

./: .gitignore  CLAUDE.md  Cargo.toml  Info.plist  LICENSE  Makefile  README.md  build.rs
.specify/: active-feature.json  config.toml  features.json  guard-audit.jsonl  guard-policy.toml
.specify/memory/: constitution.md
docs/arch/adr/: 0001-speak-cli-speech-client-for-solaris-server.md  0002-local-hardware-acceleration-and-rotating-logs.md  0003-hexagonal-ddd-gof-architecture.md  0004-async-openai-byot-and-sse-realtime.md  0005-daemon-unix-socket-persistence.md  0006-layered-config-catalog-and-precedence.md  0007-digital-multi-output-routing.md  0008-rust-edition-2021-deferral.md  0009-output-presenter-port-and-tracing-logging.md  0010-daemon-single-instance-and-health-watchdog.md  0011-realtime-input-device-binding-and-vad-controls.md  0012-exhaustive-cli-short-flags.md  0013-input-channel-selection.md  0014-streaming-transcribe-and-capture-source-selection.md  0015-capture-source-selection-and-native-output-tap.md  0016-tcc-disclaim-reexec-for-output-capture.md  0017-decoupled-streaming-capture-pipeline.md  0018-pipelined-in-flight-sse-consumer.md  0019-vad-segmented-streaming-chunks.md
docs/arch/schemas/: config.cue  speak-cli-speech-client-for-solaris-server.cue  streaming-transcribe-and-capture-source-selection.cue  voice.cue
docs/arch/sdd/001-speak-cli-speech-client-for-solaris-server/: plan.md  spec.md  tasks.md
docs/arch/sdd/002-streaming-transcribe-and-capture-source-selection/: plan.md  research.md  spec.md  tasks.md
docs/arch/specs/: acceptance-coverage.md
docs/arch/specs/features/: speak-cli-speech-client-for-solaris-server.feature  streaming-transcribe-and-capture-source-selection.feature
packaging/macos/: speak.entitlements
scripts/: macos-bundle.sh
scripts/debug/: CLAUDE.md  rust-lldb-attach.sh  rust-lldb-batch.sh  rust-panic-trace.sh
src/: accel.rs  audio_macos.rs  audio_stub.rs  client.rs  codec.rs  config.rs  config_template.toml  daemon.rs  lib.rs  logging.rs  main.rs  paths.rs  transport.rs
src/adapters/: config.rs  config_template.toml  daemon.rs  genparams.rs  headless.rs  http.rs  inproc.rs  mod.rs
src/adapters/chatmt/: mod.rs
src/adapters/coreaudio/: mod.rs  stub.rs
src/adapters/coreaudio/macos/: device.rs  disclaim.rs  engine.rs  mod.rs  stream.rs  tap.rs
src/adapters/daemon/: lifecycle.rs  watchdog.rs
src/adapters/libav/: accel.rs  codec.rs  encode.rs  mod.rs
src/adapters/openai/: client.rs  mod.rs  probe.rs  speech.rs  transcription.rs  translation.rs  voices.rs
src/adapters/presenter/: console.rs  json.rs  mod.rs
src/adapters/retry/: classify.rs  decorator.rs  mod.rs  stream.rs
src/adapters/sse/: frame.rs  mod.rs
src/application/: capture.rs  check.rs  facade.rs  fakes.rs  mod.rs  playback.rs  realtime.rs  record.rs  say.rs  stream_transcribe.rs  transcribe.rs  translate.rs  voices.rs
src/cli/: args.rs  check.rs  completions.rs  config.rs  devices.rs  mod.rs  realtime.rs  record.rs  say.rs  speech.rs  stream_pipeline.rs  transcribe.rs  translate.rs  voices.rs
src/domain/: audio_format.rs  capture_source.rs  errors.rs  gen_params.rs  language.rs  mod.rs  pcm.rs  realtime.rs  retry.rs  speech_spec.rs  voice.rs  voice_design.rs
src/ports/: audio.rs  codec.rs  config.rs  mod.rs  presenter.rs  probe.rs  realtime.rs  retry.rs  synthesizer.rs  transcriber.rs  translator.rs  voice.rs
tests/: cli.rs  gates.rs  integration.rs
