[package]
name = "speak"
version = "0.1.0"
edition = "2024"
resolver = "3"
rust-version = "1.95"
description = "Speech client for the solaris OpenAI-compatible TTS/ASR server"
license = "MIT"

[lib]
name = "speak"
path = "src/lib.rs"

[[bin]]
name = "speak"
path = "src/main.rs"

[features]
# Opt-in suite that talks to a live server (default http://solaris:8800).
# Off by default so `cargo test` stays hermetic; enable with
# `cargo test --features integration` when the server is reachable.
integration = []

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "signal", "time", "io-util", "net", "sync", "process"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls", "http2", "stream"] }
clap = { version = "4", features = ["derive", "env", "wrap_help"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
ffmpeg-the-third = "5.0.0"
# OpenAI-compatible client (typed audio endpoints for transcription/translation
# + the extended `/v1/audio/speech` request) and the realtime SSE consumer
# (ADR-0004 / T030-T032). The `audio` feature enables the transcription,
# translation, and speech API groups the `openai` adapter drives; `rustls` keeps
# the TLS backend aligned with the existing reqwest config and avoids pulling an
# OpenSSL/native-tls toolchain.
async-openai = { version = "0.41", default-features = false, features = ["rustls", "audio"] }
eventsource-stream = "0.2"
# SSE realtime consumer support: `futures-util` drives the byte/event streams the
# `sse` adapter (T036) pulls from `reqwest::Response::bytes_stream` (gated by the
# reqwest `stream` feature); `base64` decodes the SSE `audio_b64` audio chunks.
futures-util = { version = "0.3", default-features = false, features = ["std"] }
base64 = "0.22"

# Unix process control for the single-instance daemon (ADR-0010): pidfile-driven
# liveness (`kill(pid, 0)`) and graceful replace (SIGTERM -> SIGKILL). `nix` is a
# safe wrapper over the signal syscalls, so the daemon adapter needs no `unsafe`.
[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", default-features = false, features = ["signal"] }

# Native macOS audio I/O (CoreAudio / AVFAudio) — device output + mixer + mic capture.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { version = "0.6", features = ["exception"] }
objc2-foundation = { version = "0.3", features = ["NSString", "NSError", "NSThread"] }
objc2-avf-audio = { version = "0.3", features = [
    "AVAudioEngine",
    "AVAudioPlayerNode",
    "AVAudioNode",
    "AVAudioIONode",
    "AVAudioMixerNode",
    "AVAudioMixing",
    "AVAudioFormat",
    "AVAudioBuffer",
    "AVAudioChannelLayout",
    "AVAudioConnectionPoint",
    "AVAudioTime",
    "AVAudioTypes",
    "block2",
    # Exposes AVAudioIONode::audioUnit so multi-output fan-out can pin each
    # engine's output to a specific AudioDeviceID (ADR-0007).
    "objc2-audio-toolbox",
] }
block2 = "0.6"
# CoreAudio HAL device enumeration (kAudioHardwarePropertyDevices, FR-10) and the
# AudioUnit property set (kAudioOutputUnitProperty_CurrentDevice) used to pin a
# fan-out engine to a device; CFString/AudioBufferList decode device metadata.
objc2-core-audio = { version = "0.3.2", features = ["AudioHardware"] }
objc2-core-foundation = { version = "0.3.2", features = ["CFString", "CFBase"] }
objc2-core-audio-types = { version = "0.3.2", features = ["CoreAudioBaseTypes"] }
objc2-audio-toolbox = { version = "0.3.2", features = ["AudioComponent", "AudioUnitProperties"] }

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1

# Optimized build that KEEPS debug symbols (DWARF) — for lldb-grounded debugging
# of release-shaped behaviour. Same codegen as `release`, symbols retained.
# Build: `cargo build --profile release-dbg` -> target/release-dbg/speak
[profile.release-dbg]
inherits = "release"
strip = false
debug = true
