[package]
name = "speak"
version = "0.2.0"
edition = "2024"
resolver = "3"
rust-version = "1.95"
description = "OpenAI-compatible speech CLI for the OmniVoice server — TTS, voice design & cloning, Whisper STT, Qwen translation, realtime SSE, native macOS audio"
license = "MIT"
authors = ["Fabricio Archanjo <fabricio@eonf.ltd>"]
repository = "https://github.com/farchanjo/speak"
readme = "README.md"
keywords = ["tts", "speech", "whisper", "translation", "cli"]
categories = ["command-line-utilities", "multimedia::audio"]

[lib]
name = "speak"
path = "src/lib.rs"

[[bin]]
name = "speak"
path = "src/main.rs"

[features]
# Opt-in suite that talks to a live server (default http://solaris:8800).
# Off by default so `cargo test` stays hermetic; enable with
# `cargo test --features integration` when the server is reachable.
integration = []

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "signal", "time", "io-util", "net", "sync", "process"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls", "http2", "stream"] }
clap = { version = "4", features = ["derive", "env", "wrap_help"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
ffmpeg-the-third = "5.0.0"
# OpenAI-compatible client (typed audio endpoints for transcription/translation
# + the extended `/v1/audio/speech` request) and the realtime SSE consumer
# (ADR-0004 / T030-T032). The `audio` feature enables the transcription,
# translation, and speech API groups the `openai` adapter drives; `rustls` keeps
# the TLS backend aligned with the existing reqwest config and avoids pulling an
# OpenSSL/native-tls toolchain.
async-openai = { version = "0.41", default-features = false, features = ["rustls", "audio"] }
eventsource-stream = "0.2"
# SSE realtime consumer support: `futures-util` drives the byte/event streams the
# `sse` adapter (T036) pulls from `reqwest::Response::bytes_stream` (gated by the
# reqwest `stream` feature); `base64` decodes the SSE `audio_b64` audio chunks.
futures-util = { version = "0.3", default-features = false, features = ["std"] }
base64 = "0.22"

# Unix process control for the single-instance daemon (ADR-0010): pidfile-driven
# liveness (`kill(pid, 0)`) and graceful replace (SIGTERM -> SIGKILL). The
# `process` feature adds `setsid` for the detached autostart spawn (ADR-0005).
# `nix` is a safe wrapper over the syscalls.
[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", default-features = false, features = ["signal", "process"] }

# Native macOS audio I/O (CoreAudio / AVFAudio) — device output + mixer + mic capture.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { version = "0.6", features = ["exception"] }
objc2-foundation = { version = "0.3", features = [
    "NSString",
    "NSError",
    "NSThread",
    # Output-tap aggregate-device description (ADR-0015, Phase 2): NSDictionary /
    # NSArray / NSNumber build the CATap + aggregate config, NSUUID mints the
    # tap/aggregate UIDs.
    "NSObject",
    "NSArray",
    "NSDictionary",
    "NSValue",
    "NSUUID",
] }
objc2-avf-audio = { version = "0.3", features = [
    "AVAudioEngine",
    "AVAudioPlayerNode",
    "AVAudioNode",
    "AVAudioIONode",
    "AVAudioMixerNode",
    "AVAudioMixing",
    "AVAudioFormat",
    "AVAudioBuffer",
    "AVAudioChannelLayout",
    "AVAudioConnectionPoint",
    "AVAudioTime",
    "AVAudioTypes",
    "block2",
    # Exposes AVAudioIONode::audioUnit so multi-output fan-out can pin each
    # engine's output to a specific AudioDeviceID (ADR-0007).
    "objc2-audio-toolbox",
] }
block2 = "0.6"
# posix_spawn + the private responsibility_spawnattrs_setdisclaim SPI for the
# TCC-disclaim self-re-exec that makes `--source output` a TCC subject (ADR-0016).
libc = "0.2"
# CoreAudio HAL device enumeration (kAudioHardwarePropertyDevices, FR-10) and the
# AudioUnit property set (kAudioOutputUnitProperty_CurrentDevice) used to pin a
# fan-out engine to a device; CFString/AudioBufferList decode device metadata.
objc2-core-audio = { version = "0.3.2", features = [
    "AudioHardware",
    # Output tap capture (ADR-0015, Phase 2): AudioDeviceCreateIOProcID + Start/Stop
    # read the tapped aggregate device directly by id (no AVAudioEngine).
    "objc2-core-audio-types",
] }
objc2-core-foundation = { version = "0.3.2", features = ["CFString", "CFBase"] }
objc2-core-audio-types = { version = "0.3.2", features = ["CoreAudioBaseTypes"] }
objc2-audio-toolbox = { version = "0.3.2", features = ["AudioComponent", "AudioUnitProperties"] }

# ---------------------------------------------------------------------------
# Lint baseline (declarative, applies to every target — bin, lib, tests).
# Tiers:
#   * `all` group + rustc warnings  -> DENY (real bugs; codebase already clean
#     here, so `make clippy` keeps the same gate rigor it had under -D warnings).
#   * `pedantic` / `nursery` / `cargo` -> WARN (the "extremely verbose" layer:
#     visible, non-blocking; lets `make clippy` surface everything without
#     breaking the build/gates).
# Careful-with-tokio: the async/runtime lints below are EXPLICITLY allowed
# because they fire spuriously on this codebase's tokio patterns (single-thread
# !Send tasks, async state machines, guard handling). `await_holding_lock` is
# intentionally NOT allowed — that one catches a genuine tokio footgun.
# Override one site with `#[expect(clippy::lint, reason = "…")]`, not a blanket
# allow here. Group keys use priority -1 so the individual allows win.
# ---------------------------------------------------------------------------
[lints.rust]
rust_2024_compatibility = { level = "warn", priority = -1 }  # group -> low priority
unused_qualifications    = "warn"
unreachable_pub          = "warn"
# unsafe is unavoidable here (libav + CoreAudio FFI + 2024 env::set_var), so it
# stays allowed; per-block discipline is enforced by edition-2024 defaults.
unsafe_code = "allow"

[lints.clippy]
# Bug-catching groups — deny (no regression vs the old blanket -D warnings).
all = { level = "deny", priority = -1 }
# Verbose advisory groups — warn only.
pedantic = { level = "warn", priority = -1 }
nursery  = { level = "warn", priority = -1 }
cargo    = { level = "warn", priority = -1 }

# --- tokio / async false-positives (the "careful with tokio" allows) ---
future_not_send             = "allow"  # nursery: !Send daemon/realtime futures are fine
cognitive_complexity        = "allow"  # nursery: async state machines inflate this
significant_drop_tightening = "allow"  # nursery: noisy around tokio guard scopes
significant_drop_in_scrutinee = "allow" # noisy on select!/match over guarded state
redundant_pub_crate         = "allow"  # nursery: clashes with unreachable_pub above
missing_const_for_fn        = "allow"  # nursery: spurious on async-adjacent fns
option_if_let_else          = "allow"  # nursery: style churn, low signal

# --- pedantic noise on an application binary (not a published library) ---
module_name_repetitions  = "allow"  # hexagonal layering repeats module names by design
must_use_candidate       = "allow"
missing_errors_doc       = "allow"
missing_panics_doc       = "allow"
cast_precision_loss      = "allow"  # audio sample-rate / PCM math
cast_possible_truncation = "allow"
cast_sign_loss           = "allow"
cast_possible_wrap       = "allow"

# --- cargo group: things outside our control / not relevant to a local bin ---
multiple_crate_versions = "allow"  # transitive duplicate versions (objc2, windows-sys…)
cargo_common_metadata   = "allow"  # not published to crates.io

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1

# Optimized build that KEEPS debug symbols (DWARF) — for lldb-grounded debugging
# of release-shaped behaviour. Same codegen as `release`, symbols retained.
# Build: `cargo build --profile release-dbg` -> target/release-dbg/speak
[profile.release-dbg]
inherits = "release"
strip = false
debug = true
